# pytemplate

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-app.yml
