[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate"
version = "0.0.1"
description = "A python library"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Author", email = "author@email.com" }]

[dependency-groups]
dev = [
  "pre-commit~=4.5.0",
  "pytest~=9.0.2",
  "sphinx~=9.0.4",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "https://github.com/CQCL/pytemplate.git"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.refurb]
python_version = "3.14"
